[package]
name = "samd-dma"
description = "DMA wrapper library for SAM micro-controllers"
version = "0.3.0"
authors = ["Adam Jacobus <adam.m.jacobus@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/proman21/samd-dma"
homepage = "https://proman21.github.io/samd-dma"
documentation = "https://proman21.github.io/samd-dma"
keywords = ["samd", "atsamd", "samd51", "samd21"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "1.2.1"
cortex-m = "0.6.2"
smart-default = "0.6.0"
paste = "0.1.18"
typenum = { version = "1.12", features = ["no_std"] }

[dependencies.atsamd51j]
version = "0.8.0"
optional = true

[dependencies.atsamd51g]
version = "0.8.0"
optional = true

[dependencies.atsamd21g]
version = "0.8.0"
optional = true

[dependencies.atsamd21e]
version = "0.8.0"
optional = true

[dependencies.atsamd21j]
version = "0.8.0"
optional = true

[features]
samd21 = []
samd21g = ["samd21", "atsamd21g"]
samd21e = ["samd21", "atsamd21e"]
samd21j = ["samd21", "atsamd21j"]
samd5x = []
samd51j = ["samd5x", "atsamd51j"]
samd51g = ["samd5x", "atsamd51g"]

[[example]]
name = "simple"
required-features = ["samd21j"]
